# textract

./: .travis.yml  pyproject.toml
provision/: development.sh  travis-mock.sh
requirements/: python  python-dev3  python-doc
src/textract/: cli.py
src/textract/parsers/: html_parser.py  msg_parser.py  pdf_parser.py  rtf_parser.py  utils.py  xls_parser.py  xlsx_parser.py
tests/: base.py  run.py  test_pdf.py
textract/parsers/: doc_parser.py  pdf_parser.py
